@@ -1,6 +1,14 @@
 ChangeLog
 =========
 
+Next version
+------------
+
+*New:*
+
+    * Better AssertionError messages when default values have the wrong type.
+
+
 1.4.0 (2015-08-28)
 ------------------
 
